--- a/Homework/Register/register_styles.css
+++ b/Homework/Register/register_styles.css
@@ -1,10 +1,9 @@
-html {
-	height: 100%;
+* {
+	font-family: Helvetica, sans-serif;
 }
 
 body {
 	font-size: 16px;
-	font-family: sans-serif;
 	background-image: linear-gradient(-100deg, #A2F2F1 0%, #B19AFE 100%);
 }
 
